--- a/Desktop/Print-it-JS-main/assets/style.css
+++ b/Desktop/Print-it-JS-main/assets/style.css
@@ -121,6 +121,14 @@ header {
 	object-fit: cover;
 	object-position: center;
 }
+
+
+/***************************class ajoutée******************************/
+.banner-img.hidden{
+	display: none;
+}
+
+
 /* Code CSS en prévision de l'ajout d'un carousel pour la bannière */
 /* Gestion des fleches du carrousel */
 #banner .arrow {
@@ -128,6 +136,7 @@ header {
 }
 #banner .arrow_left {
 	left: 10px;
+	
 }
 #banner .arrow_right {
 	right: 10px;
