defilement des images

--- a/Desktop/Print-it-JS-main/assets/style.css
+++ b/Desktop/Print-it-JS-main/assets/style.css
@@ -124,11 +124,13 @@ header {
 
 
 /***************************class ajoutée******************************/
-.banner-img.hidden{
+.hidden{
 	display: none;
 }
 
-
+.visible {
+	visibility: visible;
+}
 /* Code CSS en prévision de l'ajout d'un carousel pour la bannière */
 /* Gestion des fleches du carrousel */
 #banner .arrow {
@@ -154,7 +156,7 @@ header {
 	background-color: #ffffff00;
 	border: 3px solid #fff;
 	border-radius: 100%;
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 .dot_selected {
 	background-color: #fff;
